fixing some minor type styles, and some layout issues

--- a/themes/blank/assets/sass/block/_features.scss
+++ b/themes/blank/assets/sass/block/_features.scss
@@ -4,6 +4,7 @@
 
 .features {
   background: linear-gradient(to bottom, $gradient-features);
+  color: $site-dark-blue;
   margin: 0;
   margin-block: 0;
   padding-top: var(--s2);
@@ -11,7 +12,6 @@
 }
 
 .feature {
-  color: $site-dark-blue;
 
   section {
     @media screen and (max-width: $small-screen ) {
@@ -21,6 +21,10 @@
 
     max-width: 60%;
     }
+
+  section:first-child {
+    z-index: 1000;
+  }
 
   section:last-child {
     margin-bottom: var(--s3);
@@ -34,7 +38,6 @@
     a {
 
       h1 {
-        // align-self: end;
         grid-area: 1 / 2 / 2 / -1;
       }
 
@@ -83,7 +86,7 @@
 
     h1 {
       align-self: end;
-      font-size: clamp(var(--s1), $preferredValue, var(--s3));
+      font-size: clamp(var(--s2), $preferredValue, var(--s4));
       font-weight: 674;
       line-height: 1;
       margin-bottom: 0;
@@ -92,13 +95,14 @@
 
     p {
       --line-height: 1.2;
-      font-size: clamp(var(--s05), $preferredValue, var(--s1));
+      font-size: clamp(var(--s1), $preferredValue, var(--s2));
       line-height: var(--line-height);
       width: 65%;
     }
 
     svg {
       filter: drop-shadow(var(--s1) var(--s1) var(--s3) transparentize($site-dark-blue, 0.35));
+      width: 100%;
       z-index: -100;
     }
   }
@@ -107,17 +111,16 @@
      filter: unset;
      transform: scale(1);
      transition: filter 300ms ease-out, transform 310ms ease-out;
-     will-change: transform;
+     will-change: transform, transition;
   }
 
   .card-state {
     $angles: 25;
     --string: 'px';
     --perspective: #{$angles};
+    color: currentColor;
     filter: blur(var(--s-4)) opacity(0.8);
     transform: scale(0.85);
     will-change: transform;
-    // perspective: 45px;
-    // perspective-origin: right;
   }
 }
